--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,17 +1,20 @@
 .Nav {
   display: flex;
   justify-content: space-between;
-  margin: 1em 0em;
+  padding: 1em 0;
+  background-color: white;
 }
 
 .Nav-left {
   padding-left: 50px;
+  font-size: x-large;
 }
 
 .Nav-right {
   display: flex;
   padding-right: 50px;
   gap: 30px;
+  align-items: center;
 }
 
 a:link {
